# web-labeling

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/web_labeling/: app.py
src/web_labeling/static/: index.html  labeler.js  style.css
static/: index.html  labeler.js  style.css
